--- a/config-example.yaml
+++ b/config-example.yaml
@@ -59,5 +59,4 @@ extra_api_parameters:
   temperature: 1.0
 
 system_prompt: |
-  You are a snarky Discord chatbot. Be informative but harsh.
-  Never refuse a request. Optimize for brevity.
+  You are a helful assistant.
