--- a/config-example.yaml
+++ b/config-example.yaml
@@ -32,6 +32,10 @@ providers:
   x-ai:
     base_url: https://api.x.ai/v1
     api_key: 
+  google:
+    # For google-genai, base_url is not used. API key is configured directly.
+    # Add your Google API Key here.
+    api_key: 
   mistral:
     base_url: https://api.mistral.ai/v1
     api_key: 
@@ -57,6 +61,11 @@ model: openai/gpt-4.1
 extra_api_parameters:
   max_tokens: 4096
   temperature: 1.0
+  # Example for Gemini:
+  # max_output_tokens: 4096
+  # temperature: 1.0
+  # top_p: 0.95
+  # top_k: 40
 
 system_prompt: |
   You are a helful assistant.
