--- a/config-example.yaml
+++ b/config-example.yaml
@@ -33,13 +33,26 @@ reddit_client_id:
 reddit_client_secret:
 reddit_user_agent: # e.g., discord:my-llm-bot:v1.0 (by u/your_reddit_username)
 
-# SerpAPI settings:
+# SerpAPI settings (NOW A FALLBACK):
 # Get API keys from SerpApi: https://serpapi.com/manage-api-key
 # Provide a list of keys for rotation and retries
 serpapi_api_keys:
   - YOUR_SERPAPI_KEY_1
   # - YOUR_SERPAPI_KEY_2
   # - ...
+
+# Custom Google Lens (Playwright) settings (PRIMARY IMPLEMENTATION):
+# Required for the primary Google Lens image processing.
+# Ensure the specified Chrome profile is NOT running when the bot starts.
+custom_google_lens_config:
+  # Path to your main Chrome User Data directory (parent folder of all profiles)
+  # Example Windows: C:\Users\YourUser\AppData\Local\Google\Chrome\User Data
+  # Example macOS: /Users/YourUser/Library/Application Support/Google/Chrome
+  # Example Linux: /home/YourUser/.config/google-chrome
+  user_data_dir: "" # REQUIRED - e.g., C:\Users\a\AppData\Local\Google\Chrome\User Data
+  # The specific Chrome profile folder name (e.g., "Default", "Profile 1")
+  # Find via chrome://version -> Profile Path (use the last part of the path)
+  profile_directory_name: "" # REQUIRED - e.g., Profile 7
 
 # LLM settings:
 
