--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ google-api-python-client
 asyncpraw
 beautifulsoup4
 google-search-results # SerpAPI library
+playwright # Added for custom Google Lens
