refactor: Prioritize SerpAPI for Google Lens, use custom as fallback

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ google-api-python-client
 asyncpraw
 beautifulsoup4
 google-search-results # SerpAPI library
-playwright # Added for custom Google Lens
+playwright # Added for custom Google Lens fallback
