--- a/config-example.yaml
+++ b/config-example.yaml
@@ -79,6 +79,7 @@ providers:
       - YOUR_OPENAI_KEY_1
       # - YOUR_OPENAI_KEY_2
       # - ...
+    disable_vision: false
   x-ai:
     base_url: https://api.x.ai/v1
     api_keys:
