refactor: replace pypdfium2 with PyMuPDF for PDF text extraction

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ asyncpraw
 beautifulsoup4
 google-search-results # SerpAPI library
 lxml
-pypdfium2 # Added for PDF text extraction
+PyMuPDF # For PDF text extraction
 tiktoken
 grip
 pyngrok
