--- a/config-example.yaml
+++ b/config-example.yaml
@@ -4,7 +4,7 @@ bot_token:
 client_id:
 status_message:
 
-max_text: 2000 # Max tokens for a single message node's text content (text from message, attachments, URLs). Uses tiktoken.
+max_text: 2000 # Max TOTAL tokens for the entire prompt sent to the LLM. This includes the system prompt, all message history (user text, bot responses, external content like YouTube/Reddit/web summaries), and tokens from any image data (if applicable, for models like GPT-4 Vision). Uses tiktoken for counting. If exceeded, history is truncated.
 max_images: 5
 max_messages: 25
 
