--- a/config-example.yaml
+++ b/config-example.yaml
@@ -127,6 +127,22 @@ providers:
 # --- Default Model Selection ---
 model: openai/gpt-4.1 # Example: Select the provider and model
 grounding_model: "google/gemini-2.5-flash-preview-05-20" # Model used for grounding pre-step (generating search queries for SearXNG)
+# --- Grounding Model Specific Parameters (for Gemini) ---
+# These parameters are applied if the grounding_model is a Gemini model and supports them.
+# (Optional) Temperature for the grounding model (Gemini) used to generate search queries.
+# Affects randomness. Higher values (e.g., 0.9) make output more random, lower values (e.g., 0.2) make it more deterministic.
+# Must be a float between 0.0 and 1.0. Default: 0.7 (see llmcord_app/constants.py)
+# grounding_model_temperature: 0.7
+
+# (Optional) Top-k sampling for the grounding model.
+# The model will consider the k most probable tokens at each step.
+# Must be a positive integer. Default: 40 (see llmcord_app/constants.py)
+# grounding_model_top_k: 40
+
+# (Optional) Top-p (nucleus) sampling for the grounding model.
+# The model will consider the smallest set of tokens whose cumulative probability exceeds p.
+# Must be a float between 0.0 and 1.0. Default: 0.95 (see llmcord_app/constants.py)
+# grounding_model_top_p: 0.95
 fallback_vision_model: "google/gemini-2.5-flash-preview-05-20" # Fallback model if the selected model doesn't support vision but images are present
 fallback_model_incomplete_stream: "google/gemini-2.5-flash-preview-05-20" # Fallback model if a non-Gemini stream ends incompletely or a 422 error occurs
 deep_search_model: "x-ai/grok-3" # Model to use when 'deepsearch' or 'deepersearch' keywords are detected
@@ -230,6 +246,15 @@ jina_engine_mode: "default"
 # "refresh": Fetches live content and updates the cache.
 # "only_refresh": Only fetches live content if it's already in cache (to update it), otherwise does nothing.
 # crawl4ai_cache_mode: "bypass"
+
+# --- External Web Content API Settings (Optional) ---
+# Configure an external API that fetches content from SearXNG results.
+# If enabled, this API will be called to get content from URLs found by SearXNG.
+# The content returned by this API will be appended to the LLM query.
+# URLs processed by this API will be ignored by LLMCord's internal fetchers.
+web_content_extraction_api_enabled: false # Set to true to enable this feature.
+web_content_extraction_api_url: "http://localhost:8080/search" # URL of the Web Content Extraction API.
+web_content_extraction_api_max_results: 3 # Max number of results to request from the API for content extraction.
 
 # --- Gemini Thinking Budget Settings ---
 # Optional: Allows Gemini models to spend more time "thinking" before generating a response.
