--- a/config-example.yaml
+++ b/config-example.yaml
@@ -333,6 +333,7 @@ alternative_search_query_generation:
   enabled: false
   # Prompt to send to non-Gemini models for search query generation.
   # {latest_query} will be replaced with the user's latest message.
+  # Note: If images are attached to the user's message, they will be sent to the LLM with this prompt.
   search_query_generation_prompt_template: |
     Current Date/Time Context: {current_date}, {current_day_of_week}, {current_time}
 
